# ChangeLog for app-admin/ldapimport
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> ldapimport-1.25.ebuild,
  +files/UidFixup.pl:
  add UidFixup script

  30 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +ldapimport-1.25.ebuild, +metadata.xml:
  initial commit
